--- a/stm32f103_hal_library19_Can_Rec_With_RB/MDK-ARM/stm32f103zet6.uvprojx
+++ b/stm32f103_hal_library19_Can_Rec_With_RB/MDK-ARM/stm32f103zet6.uvprojx
@@ -340,7 +340,7 @@
               <MiscControls></MiscControls>
               <Define>USE_FULL_LL_DRIVER,STM32F103xE,USE_HAL_DRIVER</Define>
               <Undefine></Undefine>
-              <IncludePath>../Core/Inc;../Drivers/STM32F1xx_HAL_Driver/Inc;../Drivers/CMSIS/Device/ST/STM32F1xx/Include;../Drivers/CMSIS/Include;../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy;../BSP</IncludePath>
+              <IncludePath>../Core/Inc;../Drivers/STM32F1xx_HAL_Driver/Inc;../Drivers/CMSIS/Device/ST/STM32F1xx/Include;../Drivers/CMSIS/Include;../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy;../BSP;..\lwrb\lwrb\src\include</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -1349,6 +1349,21 @@
               <FileName>myCanDrive.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\BSP\myCanDrive.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>LwRB</GroupName>
+          <Files>
+            <File>
+              <FileName>lwrb.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\lwrb\lwrb\src\lwrb\lwrb.c</FilePath>
+            </File>
+            <File>
+              <FileName>lwrb_ex.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\lwrb\lwrb\src\lwrb\lwrb_ex.c</FilePath>
             </File>
           </Files>
         </Group>
