1、成功移植USART1驱动程序到22章节的代码。

--- a/stm32f103_reg_library22_Basic_Timer/MDK-ARM/stm32f103zet6.uvprojx
+++ b/stm32f103_reg_library22_Basic_Timer/MDK-ARM/stm32f103zet6.uvprojx
@@ -510,6 +510,11 @@
               <FileType>1</FileType>
               <FilePath>..\BSP\myCanDrive\myCanDrive_reg.c</FilePath>
             </File>
+            <File>
+              <FileName>myUsartDrive_reg.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\BSP\myUsartDrive\myUsartDrive_reg.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
