1、完成22章节的代码。

--- a/stm32f103_reg_library22_Basic_Timer/MDK-ARM/stm32f103zet6.uvprojx
+++ b/stm32f103_reg_library22_Basic_Timer/MDK-ARM/stm32f103zet6.uvprojx
@@ -515,6 +515,11 @@
               <FileType>1</FileType>
               <FilePath>..\BSP\myUsartDrive\myUsartDrive_reg.c</FilePath>
             </File>
+            <File>
+              <FileName>myTIM6Drive_reg.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\BSP\myTIM6Drive\myTIM6Drive_reg.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
