--- a/stm32f103_reg_library24_TIM_Center_PWM_FOC/MDK-ARM/stm32f103zet6.uvprojx
+++ b/stm32f103_reg_library24_TIM_Center_PWM_FOC/MDK-ARM/stm32f103zet6.uvprojx
@@ -525,6 +525,16 @@
               <FileType>1</FileType>
               <FilePath>..\BSP\TIM5PWMOutput\TIM5PWMOutput_reg.c</FilePath>
             </File>
+            <File>
+              <FileName>TIM1_FOC_PWM_reg.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\BSP\TIM1FOCPWM\TIM1_FOC_PWM_reg.c</FilePath>
+            </File>
+            <File>
+              <FileName>TIM1_FOC_PWM_reg.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\BSP\TIM1FOCPWM\TIM1_FOC_PWM_reg.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
