1、bootloader程序，增加retarget_rtt模块代码。

--- a/bootloader01_stm32f103_JumpApp/Bootloader/MDK-ARM/stm32f103zet6.uvprojx
+++ b/bootloader01_stm32f103_JumpApp/Bootloader/MDK-ARM/stm32f103zet6.uvprojx
@@ -340,7 +340,7 @@
               <MiscControls></MiscControls>
               <Define>STM32F103xE,USE_HAL_DRIVER</Define>
               <Undefine></Undefine>
-              <IncludePath>../Core/Inc;../Drivers/STM32F1xx_HAL_Driver/Inc;../Drivers/CMSIS/Device/ST/STM32F1xx/Include;../Drivers/CMSIS/Include;../BSP;../lwrb/lwrb/src/include;../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy;..\BSP\bsp_usart_hal</IncludePath>
+              <IncludePath>../Core/Inc;../Drivers/STM32F1xx_HAL_Driver/Inc;../Drivers/CMSIS/Device/ST/STM32F1xx/Include;../Drivers/CMSIS/Include;../BSP;../lwrb/lwrb/src/include;../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy;..\BSP\bsp_usart_hal;..\SEGGER_RTT;..\component</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -1469,6 +1469,46 @@
                   </Cads>
                 </FileArmAds>
               </FileOption>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>SEGGER_RTT</GroupName>
+          <Files>
+            <File>
+              <FileName>SEGGER_RTT.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\SEGGER_RTT\SEGGER_RTT.c</FilePath>
+            </File>
+            <File>
+              <FileName>SEGGER_RTT.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\SEGGER_RTT\SEGGER_RTT.h</FilePath>
+            </File>
+            <File>
+              <FileName>SEGGER_RTT_ASM_ARMv7M.S</FileName>
+              <FileType>2</FileType>
+              <FilePath>..\SEGGER_RTT\SEGGER_RTT_ASM_ARMv7M.S</FilePath>
+            </File>
+            <File>
+              <FileName>SEGGER_RTT_Conf.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\SEGGER_RTT\SEGGER_RTT_Conf.h</FilePath>
+            </File>
+            <File>
+              <FileName>SEGGER_RTT_printf.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\SEGGER_RTT\SEGGER_RTT_printf.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>component</GroupName>
+          <Files>
+            <File>
+              <FileName>retarget_rtt.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\component\retarget_rtt.c</FilePath>
             </File>
           </Files>
         </Group>
