1、log_printf（）打印log增加文件名。

--- a/bootloader03_stm32f103_JumpApp/Bootloader/MDK-ARM/stm32f103zet6.uvprojx
+++ b/bootloader03_stm32f103_JumpApp/Bootloader/MDK-ARM/stm32f103zet6.uvprojx
@@ -202,7 +202,7 @@
             <NoZi2>0</NoZi2>
             <NoZi3>0</NoZi3>
             <NoZi4>0</NoZi4>
-            <NoZi5>0</NoZi5>
+            <NoZi5>1</NoZi5>
             <Ro1Chk>0</Ro1Chk>
             <Ro2Chk>0</Ro2Chk>
             <Ro3Chk>0</Ro3Chk>
@@ -212,7 +212,7 @@
             <Ra2Chk>0</Ra2Chk>
             <Ra3Chk>0</Ra3Chk>
             <Im1Chk>1</Im1Chk>
-            <Im2Chk>0</Im2Chk>
+            <Im2Chk>1</Im2Chk>
             <OnChipMemories>
               <Ocm1>
                 <Type>0</Type>
@@ -301,13 +301,13 @@
               </OCR_RVCT8>
               <OCR_RVCT9>
                 <Type>0</Type>
-                <StartAddress>0x20000000</StartAddress>
-                <Size>0x10000</Size>
+                <StartAddress>0x20000008</StartAddress>
+                <Size>0xfff8</Size>
               </OCR_RVCT9>
               <OCR_RVCT10>
                 <Type>0</Type>
-                <StartAddress>0x0</StartAddress>
-                <Size>0x0</Size>
+                <StartAddress>0x20000000</StartAddress>
+                <Size>0x8</Size>
               </OCR_RVCT10>
             </OnChipMemories>
             <RvctStartVector></RvctStartVector>
@@ -1516,9 +1516,24 @@
           <GroupName>IAP</GroupName>
           <Files>
             <File>
+              <FileName>bootloader_define.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\IAP\bootloader_define.h</FilePath>
+            </File>
+            <File>
               <FileName>flash_map.h</FileName>
               <FileType>5</FileType>
               <FilePath>..\IAP\flash_map.h</FilePath>
+            </File>
+            <File>
+              <FileName>app_jump.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\IAP\app_jump.c</FilePath>
+            </File>
+            <File>
+              <FileName>boot_entry.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\IAP\boot_entry.c</FilePath>
             </File>
           </Files>
         </Group>
