--- a/bootloader05_stm32f103_compile_bin_iap_file/App/MDK-ARM/stm32f103zet6.uvprojx
+++ b/bootloader05_stm32f103_compile_bin_iap_file/App/MDK-ARM/stm32f103zet6.uvprojx
@@ -81,9 +81,9 @@
           </BeforeMake>
           <AfterMake>
             <RunUserProg1>1</RunUserProg1>
-            <RunUserProg2>0</RunUserProg2>
+            <RunUserProg2>1</RunUserProg2>
             <UserProg1Name>C:\Keil_v5\ARM\ARMCC\bin\fromelf.exe --bin --output .\Output\App.bin .\Outputs\App.axf</UserProg1Name>
-            <UserProg2Name></UserProg2Name>
+            <UserProg2Name>crc_add.bat</UserProg2Name>
             <UserProg1Dos16Mode>0</UserProg1Dos16Mode>
             <UserProg2Dos16Mode>0</UserProg2Dos16Mode>
             <nStopA1X>0</nStopA1X>
