bootloader第11章节使用CubeMX生成RTC模块代码

--- a/bootloader10_stm32f103_backup_regsiter/Bootloader/MDK-ARM/.eide/files.options.yml
+++ b/bootloader10_stm32f103_backup_regsiter/Bootloader/MDK-ARM/.eide/files.options.yml
@@ -17,21 +17,4 @@ version: "2.0"
 options:
     stm32f103zet6:
         files: {}
-        virtualPathFiles:
-            <virtual_root>/Application/User/Core/dma.c: ""
-            <virtual_root>/Application/User/Core/usart.c: ""
-            <virtual_root>/Application/User/Core/stm32f1xx_hal_msp.c: ""
-            <virtual_root>/Drivers/STM32F1xx_HAL_Driver/stm32f1xx_hal_gpio_ex.c: ""
-            <virtual_root>/Drivers/STM32F1xx_HAL_Driver/stm32f1xx_hal_tim.c: ""
-            <virtual_root>/Drivers/STM32F1xx_HAL_Driver/stm32f1xx_hal_tim_ex.c: ""
-            <virtual_root>/Drivers/STM32F1xx_HAL_Driver/stm32f1xx_hal_uart.c: ""
-            <virtual_root>/Drivers/STM32F1xx_HAL_Driver/stm32f1xx_hal.c: ""
-            <virtual_root>/Drivers/STM32F1xx_HAL_Driver/stm32f1xx_hal_rcc.c: ""
-            <virtual_root>/Drivers/STM32F1xx_HAL_Driver/stm32f1xx_hal_rcc_ex.c: ""
-            <virtual_root>/Drivers/STM32F1xx_HAL_Driver/stm32f1xx_hal_gpio.c: ""
-            <virtual_root>/Drivers/STM32F1xx_HAL_Driver/stm32f1xx_hal_dma.c: ""
-            <virtual_root>/Drivers/STM32F1xx_HAL_Driver/stm32f1xx_hal_cortex.c: ""
-            <virtual_root>/Drivers/STM32F1xx_HAL_Driver/stm32f1xx_hal_pwr.c: ""
-            <virtual_root>/Drivers/STM32F1xx_HAL_Driver/stm32f1xx_hal_flash.c: ""
-            <virtual_root>/Drivers/STM32F1xx_HAL_Driver/stm32f1xx_hal_flash_ex.c: ""
-            <virtual_root>/Drivers/STM32F1xx_HAL_Driver/stm32f1xx_hal_exti.c: ""
+        virtualPathFiles: {}
