--- a/bootloader12_stm32f103_advance_power_down/Bootloader/MDK-ARM/stm32f103zet6.uvprojx
+++ b/bootloader12_stm32f103_advance_power_down/Bootloader/MDK-ARM/stm32f103zet6.uvprojx
@@ -1560,6 +1560,11 @@
               <FileType>1</FileType>
               <FilePath>..\IAP\ymodem.c</FilePath>
             </File>
+            <File>
+              <FileName>param_storage.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\IAP\param_storage.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
